settings button was invisible- fixed

--- a/src/views/cssFiles/mainPage.css
+++ b/src/views/cssFiles/mainPage.css
@@ -37,13 +37,16 @@ body {
 #cartBtn {
   border: none;
   background: none;
+  position: relative; 
+  top: 2px;
+  right: 19px;
   outline: none;
 }
-
+/* 
 .btn-group {
   display: flex;
   justify-content: space-evenly;
-}
+} */
 
 .cart-icon {
   font-size: 25px;
@@ -67,7 +70,7 @@ body {
 #settingsBtn
 {
   position: relative;
-  left: 240px;
+  right:25px;
 }
 
 #search-input {
@@ -136,11 +139,13 @@ body {
 
 
 .cart-counter {
+  position: relative;
   background-color: var(--purple-btn-color);
+  right: 21px;
+  top: 2px;
   padding: 1px 6px;
   color: white;
   font-size: 21px;
-  border-radius: 10px;
 }
 
 .btn.btn-primary {
